# phind_cli

./: Cargo.toml  README.md  run.bat
.fleet/: run.json
src/: main.rs
