[package]
name = "ph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3" # for our async / await blocks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }